@@ -1,4 +1,6 @@
 Changes for 1.8.0.5
+* Fixed a thread deadlock that occurs when a game ends while the battle calc is still open, resulting in triplea not returning to the host screen. (veqryn)
+
 * Prevented battle calc's calculate button from being enabled until data has finished being copied. Also added a tool tip on the button to let the user know how much memory they have left. (veqryn)
 
 * Fixed display issue with repairs not being recorded properly in history panel. (veqryn)
